Fix a few issues and styles
Fix Overview tab, Skill mod column is too narrow for double digits. #62

Fix Consider making grid columns use `word-break: break-word` #61

Fix Small formatting issues #60

* Innate spells, update column title to `Damage/Duration`.
* For arcane spells, adjust columns:
  * the mod column should not stretc
  * the target column should stretch.
  * Also, adjusted range and target to be stretch.
* Fix button hover styles.
* Move Notes popover icon to be next to name
* For innate, make name be bold and centered when starting with dashes.

--- a/ui/basicTab/basicTab.scss
+++ b/ui/basicTab/basicTab.scss
@@ -42,7 +42,7 @@
   }
 
   .feats {
-    $feat-grid-template: getResponsiveGridWidths(24px, 160px, 48px);
+    $feat-grid-template: getResponsiveGridWidths(32px, 160px, 48px);
     @include epic-table-grid('feat', $feat-grid-template);
 
     input.featname-grid {
