--- a/ui/components/gridTable/gridTable.scss
+++ b/ui/components/gridTable/gridTable.scss
@@ -10,7 +10,7 @@ $grid-column-gap: 2px;
   background: $primary-highlight-background-color;
   color: $primary-highlight-color;
   padding: $grid-padding;
-
+  word-break: break-word;
   > div {
     text-align: center;
     margin: auto;
